# chat-proof-layer-SDK

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  PROGRESS_SUMMARY.md  README.md  docker-compose.yml  get_started.md  plan.md  proof-layer-poc-plan.md  proof-layer-research.md  proof-layer-resources.md  vault.toml  vault.toml.example
.github/workflows/: docs-and-copy-gates.yml  sdk-artifacts.yml  sdk-release.yml  web-demo.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: backup.rs  build.rs  hash.rs  lib.rs  verify.rs
crates/core/src/assurance/: mod.rs
crates/core/src/completeness/: annex_iv.rs  conformity.rs  fundamental_rights.rs  gpai_provider.rs  incident_response.rs  mod.rs  post_market_monitoring.rs  provider_governance.rs
crates/core/src/disclosure/: mod.rs
crates/core/src/merkle/: mod.rs
crates/core/src/schema/: migration.rs  mod.rs  v01.rs
crates/core/src/timestamp/: mod.rs
crates/core/src/transparency/: mod.rs
crates/core/tests/: completeness.rs  golden_fixture.rs  integrity_release_blockers.rs  rfc8785_vectors.rs
crates/napi/: Cargo.toml
crates/napi/src/: lib.rs
crates/pyo3/: Cargo.toml
crates/pyo3/src/: lib.rs
crates/vault/: Cargo.toml
crates/vault/src/: main.rs
docs/: architecture.md  eu_ai_act_fork_executive_summary.md  proof_bundle.schema.json  proof_bundle_schema.md  release_and_operations_guide.md  threat_model.md  verification-test-matrix.md
docs/adr/: 0001-scope-language-targets.md
docs/compliance/: eu_ai_act_mapping.md
docs/migration/: chatbot-focus-v1.md
docs/release/: release-notes-template.md
docs/specs/: evidence_bundle.md  minimal_api.md
examples/agent-simulated/: run.py
examples/bundles/: chat-session.bundle.json  evidence-bundle-v1.example.json
examples/node-basic/: run.mjs
examples/python-annex-iv/: run.py
examples/python-basic/: run.py
examples/python-chat-proof/: run.py
examples/python-compliance/: run.py
examples/python-incident-response/: run.py
examples/typescript/: run.mjs
examples/typescript-compliance/: run.mjs
examples/typescript-gpai/: run.mjs
examples/typescript-monitoring/: run.mjs
fixtures/golden/: README.md  capture.json  expected_bundle_values.json  expected_digests.json  prompt.json  rfc8785_vectors.json  signing_key.txt  verify_key.txt
fixtures/golden/annex_iv_governance/: README.md  expected_disclosure_summary.json  expected_full_manifest_summary.json  human_oversight.json  instructions_for_use.json  risk_assessment.json  technical_doc.json
fixtures/golden/conformity/: README.md  conformity_assessment.json  declaration.json  registration.json
fixtures/golden/fixed_bundle/: manifest.json  proof_bundle.canonical.json  proof_bundle.json  proof_bundle.sig
fixtures/golden/fundamental_rights/: fundamental_rights_assessment.json  human_oversight.json
fixtures/golden/gpai_provider/: README.md  compute_metrics.json  copyright_policy.json  model_evaluation.json  technical_doc.json  training_provenance.json  training_summary.json
fixtures/golden/incident_response/: README.md  authority_notification.json  authority_submission.json  corrective_action.json  human_oversight.json  incident_report.json  policy_decision.json  regulator_correspondence.json  reporting_deadline.json  risk_assessment.json  technical_doc.json
fixtures/golden/post_market_monitoring/: README.md  authority_notification.json  authority_submission.json  corrective_action.json  incident_report.json  post_market_monitoring.json  reporting_deadline.json
fixtures/golden/provider_governance/: README.md  corrective_action.json  data_governance.json  post_market_monitoring.json  qms_record.json  standards_alignment.json
schemas/: capture_event.schema.json  completeness_report.schema.json  evidence-bundle-v1.schema.json  evidence_bundle.schema.json  evidence_item.schema.json  evidence_pack.schema.json  redacted_bundle.schema.json  schema_manifest.json  verification_assessment.schema.json  verify_receipt_response.schema.json  verify_timestamp_response.schema.json
scripts/: build_sdk_artifacts.py  check_primary_docs.py  check_release_metadata.py  check_web_demo_smoke_routes.py  generate_schemas.py  setup_openssl_windows.ps1
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/scripts/: build-native.mjs  pack-smoke.mjs
sdks/typescript/src/: advanced.ts  chat.ts  client.ts  disclosure_policy.ts  evidence.ts  index.ts  local_client.ts  native.ts  proof_layer.ts  types.ts
sdks/typescript/tests/: client.test.js  disclosure_policy.test.js  evidence.test.js  golden.test.js  local_client.test.js  native.test.js  otel.test.js  pack_readiness.test.js  proof_layer.test.js  providers.test.js
skills/local/proof-layer-rust-engineer/: SKILL.md
web-demo/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
web-demo/src/: App.jsx  main.jsx  styles.css
web-demo/src/app/: DemoContext.jsx  routes.jsx  routes.test.jsx  useVaultConnection.js  useWorkflowExecution.js
web-demo/src/components/: ActivityFeed.jsx  AppShell.jsx  AssuranceOptionToggles.jsx  AssuranceStatusCard.jsx  BundleRunList.jsx  BundleVisualizer.jsx  BusinessGlossaryNote.jsx  ComplianceExplainerCard.jsx  ComplianceReviewPanel.jsx  DataPanel.jsx  ExportStatusCard.jsx  (+18 more)
web-demo/tests/: demo.smoke.spec.js
(+62 files in other folders)
