[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/vault",
    "crates/napi",
    "crates/pyo3",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
base64ct = { version = "1.8.0", features = ["alloc"] }
bcder = "0.7.6"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.60", features = ["derive"] }
cryptographic-message-syntax = "0.28.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
flate2 = "1.1.9"
hex = "0.4.3"
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
napi = { version = "2.16", default-features = false, features = ["napi8"] }
napi-build = "2.1"
napi-derive = "2.16"
openssl = "0.10.75"
pyo3 = { version = "0.23", features = ["abi3-py310", "extension-module"] }
p256 = { version = "0.13.2", features = ["ecdsa", "pem"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_json_canonicalizer = "0.3.2"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
thiserror = "2.0.17"
tar = "0.4.44"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
toml = "0.8.23"
ulid = { version = "1.2.1", features = ["serde"] }
x509-certificate = "0.25.0"
x509-parser = { version = "0.18.0", features = ["verify"] }
