[package]
name = "proofctl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
flate2.workspace = true
hex.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

proof-layer-core = { path = "../core" }
ulid.workspace = true

[dev-dependencies]
bcder.workspace = true
cryptographic-message-syntax.workspace = true
sha2.workspace = true
x509-certificate.workspace = true
