[package]
name = "proof-layer-napi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
base64ct.workspace = true
napi.workspace = true
napi-derive.workspace = true
proof-layer-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build.workspace = true
