[package]
name = "proof-layer-pyo3"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
base64ct.workspace = true
chrono.workspace = true
proof-layer-core = { path = "../core" }
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
pyo3-build-config.workspace = true
